# Embedded-Sleep-Apnea-Detection

./: .gitignore  2_ucddb-joindataset.py  3_ucddb-sample-segments.py  4_ablation_study.py  5_model_optimization.py  OSAS-shrinked-visualization.py  OSAS-shrinking.py  OSAS-visualization.py  README.md  a.py  ablation_study.py  ablation_study_results.csv  ablation_study_results2.csv  ablation_study_results_50.csv  ablation_study_results_length.csv  idk2.py  model_optimization.py  pruning_quant_results.csv  serial_control.py  test.sh  train_2d.py  train_simple.py  ucddb-datasetbuild.py  ucddb-joindataset.py  ucddb-sample-segments.py  ucddb-small-visualization.py  ucddb-visualization.py
models/: 1-60.h5  1-60.keras  4-60.keras  8-60.keras  a.keras  baseline.tflite  dynamic.tflite  float16.tflite  int8.tflite  q-aware.tflite  w8-a16.tflite
pico-code/: CMakeLists.txt  main.cpp  main_benchmark.txt
pico-code/models/: baseline.h  dynamic.h  float16.h  int8.h  q-aware.h  w8-a16.h  w8_a16.h
results/: pico-results-inf1.txt  pico-results-inf2.txt  pico2-results-inf1.txt  pico2-results-inf2.txt  plot.py
results/measurements/: p1.csv  p1c.csv  p1i.csv  p1q.csv  p2.csv  p2c.csv  p2i.csv  p2q.csv  pico2cmsis.csv  plot.py
results/measurements/10x/: p1.csv  p1c.csv  p1i.csv  p1q.csv  p2.csv  p2c.csv  p2i.csv  p2q.csv
